Overflow issue resolved

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
   background-repeat: no-repeat;
   /* width: 100%; */
   background-size: 100vw 100vh;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 .head {
   background-image: linear-gradient(
@@ -51,6 +51,7 @@ button {
   cursor: pointer;
 }
 .container {
+  max-height: 100vh;
   display: flex;
   justify-content: center;
   margin-top: 3rem;
